# ariadne

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  docker-compose.yml  setup.sh  start_ariadne.sh
bot/: .dockerignore  .env.example  Dockerfile  bot.py  pyproject.toml
bot/ariadne/: agent.py  ariadne_task_queue.py  config.py  debug_server.py  idle_timeout.py  implementation_doc.py  orchestrator.py  paths.py  pipeline.py  repo_investigator.py  runner.py  session.py  session_logger.py  stt.py  task_executor.py  task_handler.py  task_queue.py  task_result.py  tools.py  transport.py  tts.py
bot/ariadne/coding_agent/: ARIADNE-AGENT-RULES.md  BRIEF_PROMPT.md  INVESTIGATION_PROMPT.md  __init__.py  doc_writer.py  handlers.py  investigator.py
bot/ariadne/llm_agent/: AGENT_BACKGROUND.md  CORE_INSTRUCTIONS.md  __init__.py  agent.py  tools.py
tools/: build-deploy.sh  refresh_project_background.sh  register-dialin.sh  rollback.sh
